<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyParty</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="connexion">Connexion</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birth">Birth</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="concerts">Concerts</string>
    <string name="scan">Scan</string>
    <string name="client">Clients</string>
    <string name="all_concerts">All</string>
    <string name="next_concerts">Next</string>
    <string name="details">Details</string>
    <string name="news">News</string>
    
    <string name="stats">Stats</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_deconect">Deconnexion</string>
    
    <color name="blue">#1E7FCB</color>
    <color name="trueblue">#0000FF</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="selected_color">#0098CB</color> <!-- blue  -->

</resources>
