<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <Button
		        android:id="@+id/buttonConcerts"
		        style="@style/AppBaseTheme"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selected"
		        android:text="@string/concerts" />
            
            <Button
		        android:id="@+id/buttonScan"
		        style="@style/AppBaseTheme"
		        android:layout_width="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_unselected"
		        android:text="@string/scan" />

	    	<Button
		        android:id="@+id/buttonStats"
		        style="@style/AppBaseTheme"
		        android:layout_width="wrap_content"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_unselected"
		        android:text="@string/stats" />
	    	
        </TableRow>

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal" >
	    	
            <LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical" >
				
				<Button
		        android:id="@+id/button1"
		        style="@style/AppBaseTheme"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selected"
		        android:text="B1" />
            </LinearLayout>
            
            <LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical" >
				
				<Button
		        android:id="@+id/button2"
		        style="@style/AppBaseTheme"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selected"
		        android:text="B2" />
            </LinearLayout>
            
            <LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical" >
				<Button
		        android:id="@+id/button3"
		        style="@style/AppBaseTheme"
		        android:layout_weight="1"
		        android:textColor="@color/white"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button_selected"
		        android:text="B3" />
            </LinearLayout>
	        
	    </ViewFlipper>
	
</LinearLayout>
                